k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: chenmargalit/react-test-server
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server
  type: ClusterIP
  ports:
    # name here is for logging purposes
    - name: server
      protocol: TCP
      port: 5000
      targetPort: 5000
